# -*- coding: utf-8 -*-
2008-08-16  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/local_remote_options.rb:  Added #both? to complement
	  #local? and #remote?.
	* lib/rubygems/commands/query_command.rb:  Print out LOCAL/REMOTE with
	--both, even without a TTY.

2008-08-14  Wilson Bilkovich  <wilson@supremetyrant.com>

	* lib/rubygems/source_index.rb: Deprecate options to 'search' other than
	Gem::Dependency instances and issue warning until November 2008.
	* lib/rubygems/platform.rb:	Remove deprecated constant warnings
	and really deprecate them.
	* Rakefile: If the SETUP_OPTIONS environment variable is set, pass its
	contents as arguments to setup.rb
	* test/test_gem_commands_uninstall_command.rb: Added

2008-08-13  Wilson Bilkovich  <wilson@supremetyrant.com>

	* lib/rubygems/uninstaller.rb:	Fix binary script uninstallation.
	Bug #21234 by Neil Wilson.
	* test/test_gem_commands_uninstall_command.rb: Added

2008-08-12  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/installer.rb:  Try to create directory before diverting
	to ~/.gems.
	* lib/rubygems/uninstaller.rb:  Fix uninstallation with -i.  Bug
	#20812 by John Clayton.  Have #remove_all call #uninstall_gem so hooks
	get called.  Bug #21242 by Neil Wilson.
	* lib/rubygems/commands/update_command.rb:  Fix updating RubyGems when
	no previous rubygems-update is installed.  Bug #20775 by Hemant Kumar.

2008-08-11  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/remote_fetcher.rb:  Fix HTTPS support.  Patch #21072 by
	Alex Arnell.  Fix Not Modified handling.  Bug #21310 by Gordon
	Thiesfeld.

2008-07-11  Luis Lavena  <luislavena@gmail.com>

	* setup.rb: Properly build --destdir folder structure using Pathname.
	* test/mockgemui.rb: Fix warnings about instance variables in a module.

2008-07-02  Phil Hagelberg <technomancy@gmail.com>

	* lib/rubygems/defaults.rb: Add Gem.user_dir to use paths like
	~/.gem/ruby/1.8/gems and the like instead of just ~/.gem. Update
	remote fetcher and installer to use it.
